# Shehars-AgriSaathi-AI

./: .env.example  .gitignore  README.md  pyproject.toml
agrisaathi_agent/: __init__.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  SECURITY.md
examples/: sample_session.md
scripts/: demo_offline.py
src/agrisaathi/: __init__.py  app.py
src/agrisaathi/agents/: __init__.py  crop_doctor_agent.py  market_price_agent.py  orchestrator.py  scheme_advisor_agent.py  weather_irrigation_agent.py
src/agrisaathi/data/: __init__.py  agri_schemes.json  crop_disease_kb.json
src/agrisaathi/mcp_servers/: market_mcp_server.py  weather_mcp_server.py
src/agrisaathi/security/: __init__.py  audit_log.py  guardrails.py  rate_limiter.py
src/agrisaathi/skills/: __init__.py  disease_diagnosis_skill.py  irrigation_calculator_skill.py  price_trend_skill.py  scheme_eligibility_skill.py
tests/: test_mcp_servers.py  test_security.py  test_skills_diagnosis_irrigation.py  test_skills_price_scheme.py
